--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h2{
 }
 
 body{
-    background-color: #2A1F40;
+    background-color: #305050;
     color: white;
     font-family: Roboto;
     text-align: center;
@@ -20,6 +20,7 @@ footer{
 #nome-usuário{
     font-weight: bold;
 }
+
 .texto-inglês{
     font-style: italic;
 }
